[package]
name = "mobius-designer"
version = "0.2.0"
edition = "2021"

[dependencies]
bevy_ecs = "0.16.1"
egui = "0.32"
eframe = "0.32"
egui_dock = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
syntect = { version = "5.1", default-features = false, features = ["default-fancy"] }
egui_mobius = "0.3.0-alpha.32"
egui-file-dialog = "0.11.0"

# For the library
mobius-ecs = { path = ".." }

[lib]
name = "mobius_designer"
path = "src/lib.rs"

[[bin]]
name = "mobius-designer"
path = "src/main.rs"